# game-of-life

./: CMakeLists.txt  README.md
include/: gol.h  graphics.h
src/: gol.cpp  graphics.cpp  main.cpp
